# qubit-color-demo

./: .gitignore  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  docker-compose.yaml
backend/migrations/: 0001_data.sql
backend/src/: main.rs
frontend/: Dockerfile
frontend/src/: App.jsx
