[package]
name = "color-demo2"
version = "0.1.0"
edition = "2024"

[dependencies]

    axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] } # Added "uuid" feature as it's often used with database interactions.
dotenv = "0.15" # Useful for loading environment variables like your database URL
tower-http = { version = "0.5", features = ["cors", "limit"] } # For CorsLayer and request body limits
chrono = { version = "0.4", features = ["serde"] } # For Utc
uuid = { version = "1", features = ["serde", "v4"] } # For UUID generation and serialization
tempfile = "3.3"
anyhow = "1.0"
minio-rsc = "0.2.6"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.22"
    